package eterea.stock.service.model;

import lombok.Data;

@Data
public class InventarioTurnoDto {

    private Integer inventarioTurnoId;
    private String nombre;
}
