classDiagram
    class StockMovimientoDto {
        +Long stockMovimientoId
        +Integer comprobanteId
        +... // otros campos
    }
    class ArticuloMovimientoDto {
        +Integer centroStockId
        +String articuloId
        +... // otros campos
    }
    class ArticuloDto {
        +String articuloId
        +String descripcion
        +BigDecimal precioVentaSinIva
        +BigDecimal precioVentaConIva
        +Long numeroCuentaVentas
        +Long numeroCuentaCompras
        +Long numeroCuentaGastos
        +Integer centroStockId
        +Long rubroId
        +Long subRubroId
        +... // otros campos
        +String jsonify()
    }
    class ArticuloBarraDto {
        +Long articuloBarraId
        +String codigoBarras
        +String articuloId
        +ArticuloDto articulo
        +String jsonify()
    }
    class ArticuloStockDto {
        +ArticuloDto articulo
        +String codigo
        +String descripcion
        +OffsetDateTime fecha
        +BigDecimal precio
        +String jsonify()
    }
    class RubroDto {
        +String nombre
        +List~ArticuloAjusteDto~ articulos
    }
    class EmpresaDto
    class InventarioDto
    class InventarioTurnoDto
    class StockContextDto
    class CentroStockDto {
        +Integer centroStockId
        +String nombre
    }
    class ArticuloAjusteDto
    class StockAndArticulosDto
    class StockResponseDto
    class ArticuloFechaDto {
        +Long articuloFechaId
        +String articuloId
        +String fecha
        +BigDecimal precioUsd
        +BigDecimal precioArs
    }

    StockContextDto "1" --> "many" CentroStockDto
    StockContextDto "1" --> "many" InventarioTurnoDto
    StockAndArticulosDto "1" --> "1" StockMovimientoDto
    StockAndArticulosDto "1" --> "many" ArticuloMovimientoDto
    StockResponseDto "1" --> "1" StockMovimientoDto
    RubroDto "1" --> "many" ArticuloAjusteDto
    InventarioDto "1" --> "1" InventarioTurnoDto
    InventarioDto "1" --> "1" CentroStockDto
    InventarioDto "1" --> "1" ArticuloDto
    ArticuloStockDto "1" --> "1" ArticuloDto
    ArticuloBarraDto "1" --> "1" ArticuloDto
